@@ -140,7 +140,8 @@ ldns_buffer_free(ldns_buffer *buffer)
 		return;
 	}
 
-	LDNS_FREE(buffer->_data);
+	if (!buffer->_fixed)
+		LDNS_FREE(buffer->_data);
 
 	LDNS_FREE(buffer);
 }
